fixed left align for bookmarks and z-index of modal w/ hamburger menu on mobile

--- a/src/shared/styles/index.scss
+++ b/src/shared/styles/index.scss
@@ -81,6 +81,12 @@ body {
     width: fit-content;
     margin: 0 0 0 auto;
   }
+
+  table.table-striped.table-sm .bookmark-button__container {cursor: default;
+    width: fit-content;
+  margin: 0 10px 0 0;
+  padding-top:5px;
+}
 .bookmark-button__container div * {cursor: pointer;
 }
 
